--- a/index.html
+++ b/index.html
@@ -3,142 +3,199 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stack Overflow - Python EDA & Java Solutions</title>
+    <title>GeeksforGeeks</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90' fill='%232f8d46'>G</text></svg>">
 </head>
 <body>
 
-    <header>
-        <div class="logo">
-            <div class="icon-stack"></div>
-            <span>stack</span><b>overflow</b>
-        </div>
-        <div class="search-bar">
-            <span class="search-icon">🔍</span>
-            <input type="text" placeholder="Search questions...">
-        </div>
-        <div class="nav-links">
-            <div class="nav-btn primary">Log in</div>
-            <div class="nav-btn blue">Sign up</div>
+    <header class="gfg-header">
+        <div class="header-container">
+            <div class="logo">
+                <svg class="gfg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="30" height="30">
+                    <rect x="10" y="10" width="80" height="80" rx="10" fill="#2f8d46"/>
+                    <text x="50" y="65" font-family="Arial, sans-serif" font-weight="bold" font-size="50" text-anchor="middle" fill="white">G</text>
+                </svg>
+                <span>GeeksforGeeks</span>
+            </div>
+            <nav>
+                <a href="#">Courses</a>
+                <a href="#">Tutorials</a>
+                <a href="#">Jobs</a>
+                <a href="#">Practice</a>
+                <a href="#">Contests</a>
+            </nav>
+            <div class="header-right">
+                <i class="fas fa-search search-icon"></i>
+                <button id="sign-in-btn" class="sign-in-btn">Sign In</button>
+            </div>
         </div>
     </header>
 
-    <div class="container">
-        <nav class="sidebar">
+    <div id="api-key-modal" class="modal hidden">
+        <div class="modal-content">
+            <span id="close-modal" class="close-btn">&times;</span>
+            <h3>Enter your Gemini API Key</h3>
+            <p>Paste your API key below to enable the AI code generation feature.</p>
+            <input type="password" id="api-key-input" placeholder="Paste API Key here...">
+            <button id="save-api-key-btn" class="gfg-btn">Save Key</button>
+        </div>
+    </div>
+
+    <div class="main-container">
+        <aside class="sidebar">
+            <h3>Tutorials</h3>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><span style="padding: 8px 10px; color: #888; text-transform: uppercase; font-size: 11px;">Public</span></li>
-                <li><a href="#">Questions</a></li>
-                <li><a href="#">Tags</a></li>
-                <li><a href="#">Users</a></li>
+                <li><a href="#intro">Introduction</a></li>
+                <li><a href="#basic-example">Basic Code Example</a></li>
+                <li><a href="#variables">Variables & Data Types</a></li>
+                <li><a href="#control-flow">Control Flow</a></li>
+                <li><a href="#loops">Loops</a></li>
+                <li><a href="#functions">Functions & Methods</a></li>
+                <li><a href="#oop">Object Oriented Programming</a></li>
+                <li><a href="#dsa">Data Structures</a></li>
+                <li><a href="#algorithms">Algorithms</a></li>
             </ul>
-        </nav>
+        </aside>
 
-        <main class="content">
-            <div class="content-header">
-                <h1>Top Questions: Python EDA & Java</h1>
-                <button class="ask-btn">Ask Question</button>
-            </div>
+        <main class="content-area">
+            <section id="intro">
+                <h1>Programming Tutorials</h1>
+                <p>Welcome to the GeeksforGeeks programming tutorial. This interactive guide allows you to generate code solutions for any programming question directly within the browser.</p>
+            </section>
 
-            <div class="filter-bar">
-                <div class="btn-group">
-                    <button class="active">Interesting</button>
-                    <button>Hot</button>
-                    <button>Week</button>
-                    <button>Month</button>
-                </div>
-            </div>
+            <section id="basic-example" class="interactive-section">
+                <h2 class="section-title clickable trigger-input" title="Click to toggle input">
+                    Basic Code Example
+                </h2>
+                <p>The following is a simple program that displays the message "Hello, World!" on the screen.</p>
 
-            <div id="questions-list">
-                <div class="question-item">
-                    <div class="stats">
-                        <div class="votes"><strong>15</strong> votes</div>
-                        <div class="answers has-answers"><strong>3</strong> answers</div>
-                        <div class="views">150 views</div>
+                <div class="input-container hidden">
+                    <textarea class="user-prompt"></textarea>
+                    <div class="input-actions">
+                        <span class="image-indicator hidden">
+                            <span class="img-count"></span>
+                            <i class="fas fa-times remove-img" title="Remove image"></i>
+                        </span>
+                        
+                        <button class="gfg-btn submit-btn" title="Run Code">
+                            <i class="fas fa-play" style="font-size: 10px;"></i>
+                        </button>
                     </div>
-                    <div class="q-summary">
-                        <div class="q-title">Best practices for handling missing data during Python EDA with Pandas?</div>
-                        <div class="q-excerpt">I'm performing Exploratory Data Analysis on a large dataset. What are the standard approaches to visualize and impute missing values using Pandas and Seaborn before modeling?</div>
-                        <div class="tags">
-                            <a href="#" class="tag">python</a>
-                            <a href="#" class="tag">pandas</a>
-                            <a href="#" class="tag">eda</a>
-                            <a href="#" class="tag">data-cleaning</a>
+                </div>
+
+                <div class="code-window">
+                    <div class="code-header">
+                        <span class="file-name">Solution.java</span>
+                        <div class="window-controls">
+                            <button class="control-btn" title="Close"><i class="fas fa-times"></i></button>
+                            <button class="control-btn" title="Run"><i class="fas fa-play"></i></button>
+                            <button class="control-btn copy-btn" title="Copy Code"><i class="far fa-copy"></i></button>
                         </div>
-                        <div class="user-card">asked 10 min ago by <strong>data_explorer</strong></div>
+                    </div>
+                    <div class="code-body">
+                        <div class="loader hidden"><div class="spinner"></div> Generating...</div>
+                        <pre><code class="code-display java language-java">public class <span class="hl-class">HelloWorld</span> {
+    public static void <span class="hl-method">main</span>(String[] args) {
+        System.out.println(<span class="hl-string">"Hello World!"</span>);
+    }
+}</code></pre>
                     </div>
                 </div>
+            </section>
 
-                <div class="question-item">
-                    <div class="stats">
-                        <div class="votes"><strong>8</strong> votes</div>
-                        <div class="answers"><strong>1</strong> answer</div>
-                        <div class="views">55 views</div>
-                    </div>
-                    <div class="q-summary">
-                        <div class="q-title">Efficiently reading large CSV files in Java with low memory footprint</div>
-                        <div class="q-excerpt">I need to process a multi-gigabyte CSV file in a Java application. Loading the entire file into memory causes an OutOfMemoryError. What's the best approach to read it line-by-line or in chunks?</div>
-                        <div class="tags">
-                            <a href="#" class="tag">java</a>
-                            <a href="#" class="tag">csv</a>
-                            <a href="#" class="tag">performance</a>
-                            <a href="#" class="tag">io</a>
-                        </div>
-                        <div class="user-card">asked 45 min ago by <strong>java_dev_ops</strong></div>
-                    </div>
-                </div>
+            <section id="variables">
+                <h2 class="section-title">
+                    Variables & Data Types
+                </h2>
+                <p>Variables are containers for storing data values. Common types include int, float, char, boolean, and String.</p>
 
-                 <div class="question-item">
-                    <div class="stats">
-                        <div class="votes"><strong>2</strong> votes</div>
-                        <div class="answers"><strong>0</strong> answers</div>
-                        <div class="views">20 views</div>
-                    </div>
-                    <div class="q-summary">
-                        <div class="q-title">Visualizing correlation matrices in Python: Seaborn heatmap vs. other methods</div>
-                        <div class="q-excerpt">During EDA, I often use `sns.heatmap(df.corr())`. Are there better or more interactive alternatives for visualizing correlations between many numerical features in Python?</div>
-                        <div class="tags">
-                            <a href="#" class="tag">python</a>
-                            <a href="#" class="tag">visualization</a>
-                            <a href="#" class="tag">seaborn</a>
-                            <a href="#" class="tag">correlation</a>
+                <div class="code-window">
+                    <div class="code-header">
+                        <span class="file-name">Variables.java</span>
+                        <div class="window-controls">
+                            <button class="control-btn"><i class="fas fa-times"></i></button>
+                            <button class="control-btn"><i class="fas fa-play"></i></button>
+                            <button class="control-btn copy-btn"><i class="far fa-copy"></i></button>
                         </div>
-                        <div class="user-card">asked 2 hours ago by <strong>viz_wiz</strong></div>
+                    </div>
+                    <div class="code-body">
+                        <div class="loader hidden"><div class="spinner"></div> Generating...</div>
+                        <pre><code class="code-display java language-java">public class <span class="hl-class">Variables</span> {
+    public static void <span class="hl-method">main</span>(String[] args) {
+        int myNum = <span class="hl-string">5</span>;
+        float myFloatNum = <span class="hl-string">5.99f</span>;
+        char myLetter = <span class="hl-string">'D'</span>;
+        boolean myBool = <span class="hl-keyword">true</span>;
+        String myText = <span class="hl-string">"Hello"</span>;
+        System.out.println(myNum);
+    }
+}</code></pre>
                     </div>
                 </div>
-            </div>
+            </section>
+
+            <section id="control-flow">
+                <h2 class="section-title">
+                    Control Flow (If/Else)
+                </h2>
+                <p>Conditional statements like if/else control the flow of execution based on boolean conditions.</p>
+
+                <div class="code-window">
+                    <div class="code-header">
+                        <span class="file-name">CheckNumber.java</span>
+                        <div class="window-controls">
+                            <button class="control-btn"><i class="fas fa-times"></i></button>
+                            <button class="control-btn"><i class="fas fa-play"></i></button>
+                            <button class="control-btn copy-btn"><i class="far fa-copy"></i></button>
+                        </div>
+                    </div>
+                    <div class="code-body">
+                        <div class="loader hidden"><div class="spinner"></div> Generating...</div>
+                        <pre><code class="code-display java language-java">public class <span class="hl-class">CheckNumber</span> {
+    public static void <span class="hl-method">main</span>(String[] args) {
+        int number = <span class="hl-string">10</span>;
+        if (number > <span class="hl-string">0</span>) {
+            System.out.println(<span class="hl-string">"Positive"</span>);
+        } else {
+            System.out.println(<span class="hl-string">"Not Positive"</span>);
+        }
+    }
+}</code></pre>
+                    </div>
+                </div>
+            </section>
+
+             <section id="loops">
+                <h2 class="section-title">
+                    Loops
+                </h2>
+                <p>Loops allow you to execute a block of code repeatedly until a specific condition is met.</p>
+
+                <div class="code-window">
+                    <div class="code-header">
+                        <span class="file-name">LoopExample.java</span>
+                        <div class="window-controls">
+                            <button class="control-btn"><i class="fas fa-times"></i></button>
+                            <button class="control-btn"><i class="fas fa-play"></i></button>
+                            <button class="control-btn copy-btn"><i class="far fa-copy"></i></button>
+                        </div>
+                    </div>
+                    <div class="code-body">
+                        <div class="loader hidden"><div class="spinner"></div> Generating...</div>
+                        <pre><code class="code-display java language-java">public class <span class="hl-class">LoopExample</span> {
+    public static void <span class="hl-method">main</span>(String[] args) {
+        for (int i = <span class="hl-string">0</span>; i < <span class="hl-string">5</span>; i++) {
+            System.out.println(<span class="hl-string">"Count: "</span> + i);
+        }
+    }
+}</code></pre>
+                    </div>
+                </div>
+            </section>
+
         </main>
-    </div>
-
-    <div class="chat-toggle" id="chat-toggle" title="Ask AI Helper">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
-    </div>
-
-    <div class="chat-window" id="chat-window">
-        <div class="chat-header">
-            <span>Stack Overflow AI Helper</span>
-            <span class="chat-close" id="chat-close">×</span>
-        </div>
-        <div class="chat-messages" id="chat-messages">
-            <div class="message bot">
-                Hello! I'm your AI assistant for <strong>Python EDA</strong> and <strong>Java</strong>.<br><br>Please paste your <strong>Gemini API Key</strong> below to start. You can simply <strong>paste screenshots (Ctrl+V)</strong> or upload images for analysis.
-            </div>
-        </div>
-        <div class="typing-indicator" id="typing-indicator">AI is typing...</div>
-        
-        <div class="image-preview-container" id="image-preview-container">
-            <img src="" alt="Preview" class="image-preview" id="image-preview">
-            <span class="clear-image" id="clear-image">×</span>
-        </div>
-
-        <div class="chat-input-area">
-            <label for="image-input" class="image-upload-label" title="Attach Image">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"/></svg>
-            </label>
-            <input type="file" id="image-input" accept="image/png, image/jpeg, image/webp" title="Attach image file">
-            <input type="text" id="chat-input" placeholder="Type a message or paste an image..." autocomplete="off">
-            <button class="chat-send" id="chat-send">Send</button>
-        </div>
     </div>
 
     <script src="script.js"></script>
