--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <rect x="10" y="10" width="80" height="80" rx="10" fill="#2f8d46"/>
                     <text x="50" y="65" font-family="Arial, sans-serif" font-weight="bold" font-size="50" text-anchor="middle" fill="white">G</text>
                 </svg>
-                <span>GeeksforGeeks</span>
+                <span>GeeksCodeHub</span>
             </div>
             <nav>
                 <a href="#">Courses</a>
